# BRESLEV-TORAH-ONLINE

./: .env.development  .env.example  .env.production  .eslintrc.json.backup  .firebaserc  .gitignore  .pre-commit-config.yaml  .replit  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_MANUAL.md  ETAT_FINAL_PROJET.md  Makefile  NETLIFY_DEPLOYMENT_GUIDE.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PROJECT_SUMMARY.md  QUICK_AUDIT.md  README.md  cache.db  deploy-railway.sh  deploy-vercel.sh  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.yml  generateSefariaTree.js  package-lock.json  package.json  playwright.config.js  proxy.cjs  railway.toml  replit.md  replit.nix  run.sh  server.js  start.sh  test-deployment.sh  test-installation.sh  test-lemberg.html  test-multi-book.html  (+6 more)
.claude/: api-endpoints.md  architecture.md  progress.md  project-context.md  troubleshooting.md
.firebase/: hosting.ZGlzdA.cache
attached_assets/: Pasted--1-Ta-cl-Gemini-cl-Google-Cloud-TTS-Cl-Gemini-API-Generative-AI-Sert-uniquem-1751237196845_1751237196845.txt  Pasted--Add-on-tasks-to-finish-the-job-Guidance-Analyser-buttons-text-segmentation-quality-ga-1751236929902_1751236929902.txt  Pasted--Comment-passer-d-un-TTS-bas-de-gamme-Web-Speech-natif-une-voix-d-homme-haute-fid-lit--1751236745315_1751236745315.txt  Pasted--Correctif-cibl-remettre-en-route-TTS-Guidance-Analyser-et-viter-la-surcharge-de-Gem-1751235865856_1751235865857.txt  Pasted--Correctif-deux-en-un-remettre-d-aplomb-TTS-boutons-Guidance-Analyser-et-segment-1751236128848_1751236128848.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-meta-name-viewport-content--1751231348249_1751231348249.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-meta-name-viewport-content-1751228183589_1751228183589.txt  Pasted--Erreur-observ-e-capture-d-cran-plugin-runtime-error-plugin-Failed-to-fetch-client-sr-1751235934822_1751235934823.txt  Pasted--Guide-d-utilisation-de-l-API-Sefaria-Introduction-Sefaria-est-une-biblioth-que-num-rique-de-te-1751227845493_1751227845493.txt  Pasted--Guide-ultra-rapide-coller-le-projet-Le-Compagnon-du-C-ur-dans-Replit-copier-av-1751226184061_1751226184062.txt  Pasted--Instructions-fermes-sans-d-tour-pour-ton-dev-Replit-copie-colle-lui-tel-quel-aucun-bla--1751233281799_1751233281799.txt  Pasted--Instructions-imm-diates-pour-le-constructeur-Replit-version-faible-trafic-appels-Sefaria--1751233872037_1751233872038.txt  Pasted--Instructions-pr-cises-transmettre-Replit-pour-corriger-d-finitivement-l-application-co-1751230346193_1751230346194.txt  Pasted--Instructions-ultra-concr-tes-copier-coller-dans-le-chat-Replit-Objectif-r-cup-rer-t-1751234315530_1751234315531.txt  Pasted--Key-Points-Il-semble-probable-que-pour-configurer-Le-Compagnon-du-C-ur-sur-Replit-vous-devr-1751229372538_1751229372538.txt  Pasted--Message-l-quipe-agent-Replit-Priorit-Critique-Bonjour-Nous-entrons-dans-une-phase--1751233665541_1751233665542.txt  Pasted--Page-guide-sans-code-pour-b-tir-Le-Compagnon-du-C-ur-1-Vision-But-o-1751226528092_1751226528092.txt  Pasted--Plan-de-mise-jour-S-lection-TTS-d-accueil-aucune-d-pendance-nouvelle-vous-ne-touc-1751235307597_1751235307598.txt  Pasted--Pourquoi-a-coince-1-Replit-preview-domaine-diff-rent-de-https-www-sefaria-org--1751228523111_1751228523112.txt  Pasted--Pourquoi-a-ne-marche-toujours-pas-D-apr-s-tous-les-cas-similaires-vus-sur-Replit-Sefar-1751229564358_1751229564358.txt  Pasted--Study-Avant-d-analyser-le-Likutei-Moharan-1-il-est-important-de-pr-ciser-qu-il-s-agit-d-un--1751234347544_1751234347545.txt  Pasted--Syst-me-Gemini-Context-Orchestrator-extension-novatrice-du-flux-S-lection-TTS-Analys-1751235611451_1751235611452.txt  Pasted--VERSION-QUI-MARCHE-Node-js-Installez-d-abord-npm-install-node-fetch-const-fetch-requir-1751228400221_1751228400221.txt  Pasted--VERSION-QUI-MARCHE-Python-pip-install-requests-import-requests-import-json-import-time-from-1751228294199_1751228294199.txt  Pasted-Absolument-En-tant-qu-architecte-logiciel-j-ai-analys-en-profondeur-la-structure-de-votre-applica-1751285589413_1751285589413.txt  Pasted-Absolument-Il-est-en-effet-humainement-impossible-de-collecter-manuellement-toutes-ces-r-f-rences--1751286086395_1751286086396.txt  Pasted-Absolument-Voici-l-analyse-la-plus-compl-te-et-contextuelle-de-votre-projet-Je-vais-non-seulement--1751286049002_1751286049003.txt  Pasted-Absolument-Voici-la-description-compl-te-et-d-taill-e-de-l-application-Le-Compagnon-du-C-ur-expl-1751226516793_1751226516793.txt  (+17 more)
backend/: .env.development  AGENT1_STATUS.txt  Dockerfile  FINAL_STATUS.txt  SMART_IMPORT_GUIDE.md  alembic.ini  deploy_migration.py  main_simple.py  manage_migrations.py  pyproject.toml  register_user.json  requirements.txt  run_alembic.py  test_enhanced_tts.py  test_login.json  test_simple_tts.py  test_standalone_tts.py  test_tts_basic.py  test_tts_service.py  test_user.json
backend/app/: __init__.py  config.py  database.py  main.py  redis_client.py
backend/app/api/v1/: auth.py  books.py  enhanced_tts.py  gemini.py  texts.py  tts.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  auth.py  book.py  bookmark.py  chat.py  study_progress.py  text.py  user.py
backend/app/services/: auth.py  cache_service.py  chat_service.py  email.py  enhanced_tts_service.py  gemini_manager.py  real_gemini_manager.py  sefaria_client.py  sefaria_smart_import.py  simple_tts_service.py  tts_manager.py  user.py
backend/app/utils/: logger.py  monitoring.py  rate_limiter.py  security.py  validators.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20250709_064852_initial_migration.py  c108b553a0cb_initial_tables_with_uuid_fixes.py
backend/scripts/: create_sample_books.py  fetch_breslov_books.py  fetch_real_sefaria.py  import_local_books.py  import_production_books.py  import_sefaria.py  smart_import_enhanced.py  test_smart_import.py  verify_and_fix_import.py
client/: index.html
codemod/: addStateVars.ts
scripts/: build.mjs  (+7 more)
(+205 files in other folders)
